--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -10,4 +10,32 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+} */
+
+.loginForm {
+position: absolute; 
+left: 33%;
+top: 33%; 
+background-color: green;
+width: 25%;
+border: 1px solid #000;
+padding: 5%;
 }
+
+
+.hidden {
+  display: none;
+}
+
+.mainPage {
+text-align: center;
+
+}
+
+.headline ul {
+  display: flex;
+  width: 66%;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
